--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,16 @@ h6 {
   font-weight: 300;
   font-style: italic;
 }
+
+.graph-container {
+  width: 200px;
+  height: 20px;
+  background-color: #ddd;
+}
+
+.graph-bar {
+  height: 100%;
+  background-color: #007bff;
+  width: 0%;
+  transition: width 0.5s;
+}
