made the Pets btn link to the pets menu page--it is inelegant and will be changed if there is time

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -103,6 +103,16 @@ h6 {
   
 }
 
+.link-remove {
+  text-decoration: none;
+  color: black;
+}
+
+.link-remove:hover {
+  text-decoration: none;
+  color: black;
+}
+
 /* Main */
 .main-parent {
   height: 100%;
