--- a/client/src/index.css
+++ b/client/src/index.css
@@ -421,19 +421,23 @@ h6 {
   height: 20%;
   width: 30%;
 
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-style: italic;
+  
+
   display: flex;
   align-self: center;
   justify-content: center;
   align-items: center;
 
   border-radius: 40%;
-  background-color: rgb(57, 112, 57);
+  background-color: rgb(19, 50, 7);
   border-color: rgb(245, 151, 20);
   color: rgb(245, 151, 20);
   text-shadow: 2px 2px 4px rgb(138, 0, 0);
   box-shadow: 5px 2px 15px 3px rgb(81, 81, 81);
 
-  font-weight: 800;
+  font-weight: 200;
   font-size: xx-large;
 
   transition: ease-in-out .5s;
