--- a/client/src/index.css
+++ b/client/src/index.css
@@ -157,6 +157,99 @@ h6 {
 
 /* Pets Menu */
 
+.pet-names-header {
+  height:3%;
+  width:100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.pet-names {
+  height: 5%;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-align: center;
+  margin-bottom: 3%;
+  color: black;
+  height: 100%;
+
+}
+
+.project-parent {
+  width: 40vh;
+  height: 20vh ;
+  margin: 0 auto;
+  overflow: hidden;
+  border-color: rgb(250, 162, 0);
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0px 0px 20px 5px rgb(196, 196, 196);
+  margin-bottom: 10%;
+}
+
+.project-parent:hover {
+  box-shadow: 0px 0px 80px 5px rgb(196, 196, 196);
+}
+
+.project-overlay {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.project-img {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.project-description {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: rgb(250, 162, 0);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  display: flex;
+  flex-direction: column;
+}
+
+.project-links-parent {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding:  5%;
+  padding-bottom: 1%;
+  
+}
+
+.description-format {
+  flex-direction: column;
+  justify-content: left;
+  padding:  5%;
+  padding-top: 0%;
+}
+
+.project-link {
+  padding-top: 5%;
+  font-size: large;
+  color: rgb(175, 1, 1);
+}
+
+.project-overlay:hover .project-description {
+  min-width: 100%;
+  min-height: 100%;
+  background-color: rgb(48, 48, 48);
+  opacity: .8;
+}
+
+
+
+
+
+
 .pets-menu-parent {
   width: 100%;
   height: 100%;
@@ -167,6 +260,8 @@ h6 {
   
 }
 
+/*
+
 .pets-menu-col {
   width: 45%;
   height: 100%;
@@ -174,15 +269,48 @@ h6 {
   justify-content: center;
   flex-direction: column;
   max-height: fit-content;
-  
-  
-  
 }
 
 .Pets-Menu-Componet-Parent {
-  height: 45vh;
+  height: 35vh;
   display: flex;
   flex-direction: column;
+}
+
+
+
+.menu-img-container {
+  width: 40vh;
+    height: 20vh ;
+    margin: 0 auto;
+    overflow: hidden;
+    border-color: rgb(250, 162, 0);
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 0px 0px 20px 5px rgb(196, 196, 196);
+    margin-bottom: 10%;
+}
+
+.menu-img-container:hover {
+  
+  box-shadow: 0px 0px 80px 5px rgb(196, 196, 196);
+  
+}
+
+.menu-img-overlay {
+  
+  width: 100%;
+  height: 100%;
+  position: relative;
+  
+}
+
+.pets-img {
+
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  transition: opacity 0.3s ease-in-out;
 }
 
 
@@ -197,25 +325,11 @@ h6 {
 }
 
 
-.pets-name {
-  height: 20%;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  text-align: center;
 
-}
 
-.menu-img-container {
-  height: 20vh;
-  width: 100%;
-  overflow: hidden;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-  overflow: hidden;
-  padding-bottom: 3%;
-}
+
 
 .pets-img {
   height: 100%;
@@ -266,6 +380,8 @@ h6 {
 .Pets-Menu-Sub-Parent-Txt {
   margin-top: 10% ;
 }
+
+*/
 
 /* Donate */
 
