--- a/client/src/index.css
+++ b/client/src/index.css
@@ -246,10 +246,6 @@ h6 {
 }
 
 
-
-
-
-
 .pets-menu-parent {
   width: 100%;
   height: 100%;
@@ -324,13 +320,6 @@ h6 {
 
 }
 
-
-
-
-
-
-
-
 .pets-img {
   height: 100%;
   width: 60%;
@@ -383,11 +372,76 @@ h6 {
 
 */
 
+/* Pet Page */
+
+.petpage-article-parent {
+  
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+  
+}
+
+.petpage-left {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+
+}
+
+.petpage-img-container {
+  width: 75%;
+  height: 75%;
+  background-color: black;
+  border-radius: 50%;
+
+  object-fit:cover;
+  overflow: hidden;
+
+  border: black;
+
+  border-width: 5px;
+  border-style: solid;
+
+  box-shadow: 7px 7px 25px 10px rgb(81, 81, 81);
+
+}
+
+.petpage-img {
+  width: 100%;
+  height: 100%;
+}
+
+.petpage-right {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+}
+
+.petpage-section {
+  border: solid black 2px;
+  width: 95%;
+  height: 25%;
+  justify-self: center;
+  background-color: white;
+  box-shadow: 10px 10px 15px 5px rgb(81, 81, 81);
+}
+
 /* Donate */
-
-
 .donate-parent {
-
   width: 100%;
   height: 100%;
   display: flex;
@@ -428,7 +482,7 @@ h6 {
   border-color: black;
   border-style: solid;
 
-  box-shadow: 5px 2px 15px 3px rgb(81, 81, 81);
+  object-fit:contain;
 
 
 
