--- a/client/src/index.css
+++ b/client/src/index.css
@@ -635,6 +635,88 @@ h6 {
 
 }
 
+/* User Profile */
+
+.profile-parent {
+  height: 100%;
+  width: 80%;
+  margin-top: 2%;
+  margin-bottom: 2%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.profile-upper {
+  height: 30%;
+  width: 100%;
+  margin-bottom: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-bottom: 3px gray solid;
+}
+
+.profile {
+  height: 25%;
+  min-width: fit-content;
+  width: 45%;
+
+  background-color: white;
+  border: 2px black solid;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
+.profile-email {
+  color: rgba(128, 128, 128, 0.885);
+}
+
+.profile-lower {
+  height: 70%;
+  width: 100%;
+  
+
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+
+  overflow-y: scroll;
+  flex-shrink: 0;
+  
+  
+  
+}
+
+.history-parent {
+  height: 40px;
+  width: 60%;
+
+  border: black 2px solid;
+  background-color: white;
+
+  justify-self: center;
+
+  margin-bottom: 1%;
+  flex-shrink: 0;
+
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  padding: .5%;
+  
+}
+
+
+
 
 
 /* Footer */
