--- a/client/src/index.css
+++ b/client/src/index.css
@@ -68,14 +68,15 @@ h6 {
 }
 
 .site-title {
+  color: transparent;
   background-image: url('./assets/tigerprint.jpg');
   background-clip: text;
   -webkit-background-clip: text;
-  color: transparent;
 }
 
 .title-span {
   color:rgb(1, 1, 1);
+  text-shadow: 2px 2px 4px rgb(138, 0, 0);
 }
 
 .lower-header {
@@ -523,66 +524,79 @@ h6 {
 
 
 .donation-close-btn {
-  
   display: flex;
   align-self: flex-end;
   font-size: 3vh;
   margin-right: 3%;
-  margin-bottom: 2%;
   color: rgb(19, 50, 7);
 }
 
 .donate-modal-form {
   height: 95%;
   width: 100%;
-
   display: flex;
   flex-direction: column;
-
+  overflow: hidden;
 }
 
 .modal-header {
   align-self: center;
   margin: 1%;
-  margin-bottom: 5%;
-
   border-radius: 40%;
-  
-  height: 25%;
-  
+  height: 18%;
   align-self: center;
-  margin: 1%;
-  margin-bottom: 5%;
+  margin-bottom: 2.5%;
   border-radius: 40%;
-  
   padding: 1%;
-  
   background-color: rgba(0, 0, 0, 0.481);
-
   color: rgb(245, 151, 20);
   text-shadow: 2px 2px 4px rgb(138, 0, 0);
-  
 }
 
-.lower-donate-modal {
+.central-donate-modal {
   display: flex;
   justify-content: space-around;
   padding: 15px;
-  padding-bottom: 0px;
-  margin-bottom: 6%;
+  margin-bottom: 1%;
 }
 
 .modal-text {
   margin-right: 10px;
+  width: 100%;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
 }
 
 .dModal-selector-parent {
+  
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+ 
+}
+
+.modal-text {
   background-color: rgba(0, 0, 0, 0.481);
-  border-radius:45%;
+  
   padding-left: 2%;
   color: rgb(245, 151, 20);
   text-shadow: 2px 2px 4px rgb(138, 0, 0);
+}
 
+
+
+.lower-donate-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+
+}
+
+.message {
+  
+  height: 50px;
+  
 }
 
 .donate-submit-btn {
@@ -610,6 +624,8 @@ h6 {
 
   transition: ease-in-out .5s;
 
+  margin-top: 1%;
+
 }
 
 .donate-submit-btn:hover {
@@ -631,7 +647,7 @@ h6 {
   font-weight: 800;
   font-size: xx-large;
 
-  transform: scale(1.5);
+  transform: scale(.75);
 
 }
 
