--- a/client/src/index.css
+++ b/client/src/index.css
@@ -141,9 +141,32 @@ h6 {
   color: black;
 }
 
+@media only screen and (max-width: 600px) {
+  
+  .site-title {
+    font-size: 24px;
+  }
+  .header-btn {
+    width: 50px;
+    font-size: 14px;
+  }
+  .login-btn {
+    font-size: 14px;
+  }
+  .profile-btn {
+    width: 30px;
+  }
+
+  .lower-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
 /* Main */
 .main-parent {
-  height: 75vh;
+  height: auto;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -152,7 +175,7 @@ h6 {
 }
 
 .main-article-parent {
-  height: 100%;
+  height: auto;
   width: 90%;
   background-color: rgba(254, 254, 254, 0.814);
   display: flex;
@@ -168,14 +191,31 @@ h6 {
 }
 
 .main-article {
-  width: 50%;
-  height: 50vh;
+  width: 90%;
+  height: auto;
   background-color: whitesmoke;
   border-style: solid;
   border-color: rgb(232, 140, 20);
   box-shadow: 0px 0px 20px 5px rgb(32, 32, 32);
   padding: 3%;
   text-indent: 2%;
+}
+
+@media only screen and (min-width: 768px) {
+  /* Styles for larger screens */
+  .main-parent {
+    height: 75vh;
+  }
+
+  .main-article-parent {
+    height: 100%;
+    width: 50%;
+  }
+
+  .main-article {
+    width: 100%;
+    height: 50vh;
+  }
 }
 
 /* Pets Menu */
