--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,7 +23,6 @@ h6 {
 }
 
 /*header*/
-
 .main-header-parent {
   width: 100%;
   height: 20vh;
@@ -44,7 +43,7 @@ h6 {
   justify-content: space-between;
 }
 
-.login-btn {
+.upper-h-btn {
   padding-right: 1.5%;
   border-color: transparent;
   background-color: transparent;
@@ -54,29 +53,9 @@ h6 {
   transition: ease-in-out .75s;
 }
 
-.login-btn:hover {
+.upper-h-btn:hover {
   transform: scale(1.75);
   color:rgb(247, 173, 0);
-}
-
-.profile-btn {
-  border-radius: 45%;
-  width: 5vh;
-  min-width: fit-content;
-  border-color: transparent;
-  background-color: white;
-  
-  transition: ease-in-out 3s;
-
-}
-
-.profile-btn:hover {
-  border-radius: 45%;
-  width: 5%;
-  border-color: transparent;
-  background-color: rgb(250, 134, 1);
-  box-shadow: 7px 7px 10px 5px rgb(81, 81, 81);
-  transform: scale(2);
 }
 
 .central-header {
@@ -108,6 +87,7 @@ h6 {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  overflow: hidden;
 }
 
 .header-btn {
@@ -205,11 +185,6 @@ h6 {
   /* Styles for larger screens */
   .main-parent {
     height: 75vh;
-  }
-
-  .main-article-parent {
-    height: 100%;
-    width: 50%;
   }
 
   .main-article {
@@ -727,10 +702,6 @@ h6 {
   }
 }
 
-
-
-
-
 /* Footer */
 
 .main-footer-parent {
@@ -773,11 +744,6 @@ h6 {
 }
 
 @media (max-width: 768px) {
-  .footer-content-box {
-    flex-direction: column;
-    justify-content: center;
-  }
-
   .icon {
     font-size: large;
     margin-top: 10px;
