--- a/client/src/index.css
+++ b/client/src/index.css
@@ -169,13 +169,14 @@ h6 {
 
 .main-article {
   width: 90%;
-  height: auto;
+  height: 100%;
   background-color: whitesmoke;
   border-style: solid;
   border-color: rgb(232, 140, 20);
   box-shadow: 0px 0px 20px 5px rgb(32, 32, 32);
   padding: 3%;
   text-indent: 2%;
+  overflow: hidden;
 }
 
 @media only screen and (min-width: 768px) {
@@ -186,7 +187,6 @@ h6 {
 
   .main-article {
     width: 100%;
-    height: 50vh;
   }
 }
 
