--- a/client/src/index.css
+++ b/client/src/index.css
@@ -485,7 +485,7 @@ h6 {
   width: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
   padding: 5px;
 }
 
@@ -508,7 +508,7 @@ h6 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  padding: 15px;
+  padding-bottom: 15px;
   margin-bottom: 1%;
 }
 
@@ -556,7 +556,7 @@ h6 {
 }
 
 .donate-submit-btn {
-  height: 100%;
+  height: 30%;
   width: 100%;
   position: relative;
   bottom: 10%;
@@ -581,7 +581,7 @@ h6 {
 
   transition: ease-in-out .5s;
 
-  margin-top: 1%;
+  margin-top: 25%;
   margin-bottom: 3%;
 
 }
