--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,7 +53,15 @@ h6 {
   margin-right: 2%;
   color: white;
   transition: ease-in-out .75s;
+  text-decoration: none;
+  
+  
+  
+ 
+
 }
+
+
 
 .upper-h-btn:hover {
   transform: scale(1.75);
@@ -147,38 +155,37 @@ h6 {
   border-bottom: 1px solid;
   margin-bottom: 2%;
   margin-top: 3%;
-
-  
-
-  
-  
-  
-  
 }
 
 .main-article {
   width: 50%;
   height: 50vh;
-  max-height: max-content;
+  min-height: max-content;
   background-color: whitesmoke;
   border-style: solid;
   border-color: rgb(232, 140, 20);
   box-shadow: 0px 0px 20px 5px rgb(32, 32, 32);
   padding: 3%;
+  
   text-indent: 2%;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
   overflow: scroll;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 400px) {
   .main-article {
-    width: 100%;
-    padding: 0px;
+    width: 98%;
+    padding-top: 69vh;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .main-article {
+    width: 95%;
+    
   }
 }
 
@@ -386,9 +393,7 @@ h6 {
   width: 25%;
   height: 15%;
   border-radius: 90%;
-
   font-size: large;
-  
   color:rgb(245, 241, 16);
   text-shadow: 2px 2px 4px rgb(138, 0, 0);
   background-image: url('./assets/tigerprint.jpg');
@@ -399,7 +404,6 @@ h6 {
   width: 100%;
   display: flex;
   justify-content: center;
-
 }
 
 .donate-pic-container {
@@ -419,23 +423,18 @@ h6 {
 
 .donation-modal {
   min-height: 50%;
-  height: fit-content;
+  height: 20vh;
   width: 90%;
   background-color: white;
-
   display: flex;
   flex-direction: column;
   justify-content: center ;
   align-items: center;
-
   margin-bottom: 5%;
-
   border: 2px;
   border-color: black;
   border-style: solid;
-
   box-shadow: 5px 2px 15px 3px rgb(81, 81, 81);
-  
 }
 
 .dmodal-content {
@@ -443,16 +442,11 @@ h6 {
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center ;
+  justify-content: center;
   align-items: center;
-
-  
   background-image: url(./assets/jungle.png);
-  object-fit: cover;
-
+  background-size: contain;
 }
-
-
 
 .donation-close-btn {
   display: flex;
@@ -582,6 +576,30 @@ h6 {
   transform: scale(.75);
 
 }
+
+@media only screen and (max-width: 400px) {
+  .donate-pic-container {
+    width: 60%;
+    
+  }
+
+  .message  {
+    height: 20px;
+  }
+
+  .donate-submit-btn{
+    height: 25px;
+    font-size: medium;
+  }
+
+  .dModal-selector{
+    width: 75px
+  }
+  
+}
+
+
+
 
 /* User Profile */
 
