some viewport changes for 1920x1080

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -598,6 +598,24 @@ h6 {
   
 }
 
+@media only screen and (min-width: 1080px) {
+  
+
+  .message  {
+    height: 40px;
+  }
+
+  .donate-submit-btn{
+    height: 50px;
+    font-size: large;
+  }
+
+  .dModal-selector{
+    width: 75px
+  }
+  
+}
+
 
 
 
