--- a/client/src/index.css
+++ b/client/src/index.css
@@ -303,12 +303,9 @@ h6 {
 .petpage-article-parent {
   width: 100%;
   height: 100%;
-
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-
-  
 }
 
 .petpage-left {
@@ -350,11 +347,20 @@ h6 {
 .petpage-section {
   border: solid black 2px;
   width: 95%;
-  height: 25%;
+  max-height: 25%;
+  height: fit-content;
   justify-self: center;
   background-color: white;
   box-shadow: 10px 10px 15px 5px rgb(81, 81, 81);
   overflow-y: scroll;
+  transition: ease-in-out .5s;
+  padding: 5px;
+}
+
+.petpage-section:hover{
+  transform: scale(1.09);
+  box-shadow: 7px 7px 8px 2px rgb(81, 81, 81);
+  border-color: rgb(250, 162, 0);
 }
 
 /* Donate */
