--- a/client/src/index.css
+++ b/client/src/index.css
@@ -363,6 +363,20 @@ h6 {
   border-color: rgb(250, 162, 0);
 }
 
+@media only screen and (max-width: 800px) {
+
+  .petpage-article-parent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .petpage-right {
+    margin-left: 5%;
+    margin-bottom: 4%;
+  }
+}
+
 /* Donate */
 .donate-parent {
   width: 100%;
