--- a/client/src/index.css
+++ b/client/src/index.css
@@ -533,21 +533,10 @@ h6 {
 }
 
 .donate-submit-btn:hover {
-  height: 20%;
-  width: 30%;
-  display: flex;
-  align-self: center;
-  justify-content: center;
-  align-items: center;
-  border-radius: 40%;
   background-color: rgb(245, 151, 20);
-  border-color:  transparent;
-  color: rgb(57, 112, 57);
-  text-shadow: 2px 2px 4px rgb(255, 255, 255);
-  box-shadow: 5px 5px 25px 10px rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: xx-large;
-  transform: scale(.75);
+  border-color:  rgb(19, 50, 7) ;
+  color:  rgb(19, 50, 7);
+  text-shadow: 2px 2px 4px rgb(251, 251, 251);
 }
 
 @media only screen and (max-width: 400px) {
