--- a/client/src/index.css
+++ b/client/src/index.css
@@ -224,6 +224,17 @@ h6 {
   position: relative;
 }
 
+@media screen and (max-width: 768px) {
+  .project-overlay {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-y: scroll;
+    text-align: center;
+  }
+}
+
 .project-img {
   width: 100%;
   height: 100%;
@@ -271,10 +282,6 @@ h6 {
   padding-top: 5%;
   font-size: large;
   color: rgb(175, 1, 1);
-
-  @media screen and (max-width: 768px) {
-    font-size: medium;
-  }
 }
 
 .project-overlay:hover .project-description {
